added ripper for e621.net refactored paheal.net and xbooru.com rippers: - used absUrl() instead of plain attr() - album names (and file names for paheal) now passed through filesystemSafe()